--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,8 @@ a:hover{
 
 .get-start{
   color: #fff;
-  font-size: 46px;
+  font-size: 42px;
+    font-weight: bold;
   text-transform: uppercase;
   background: #db3d67;
   padding: 27px 0px;
@@ -44,8 +45,9 @@ a:hover{
 }
 .btn-sign{
   padding: 20px 30px;
-  font-size: 44px;
+  font-size: 40px;
    border-radius: 10px;
+     font-weight: bold;
   color: #fff;
    margin-bottom: 45px;
 }
@@ -212,7 +214,7 @@ top: 0px;
   top: 68px;
 
 }
-.math-25:after,.phy-25:after{
+/*.math-25:after,.phy-25:after{
     width: 150px;
 }
 .math-50:after,.phy-25:after{
@@ -220,7 +222,7 @@ top: 0px;
 }
 .math-75:after,.phy-25:after{
     width: 450px;
-}
+}*/
 
 /* */
 header{
@@ -280,7 +282,23 @@ header{
    background-position: -338px -166px;
   top: -13px;
 }
-.math-star-0:after{
+.phy-view-25{
+   background-position: -627px -246px;
+  top: -13px;
+}
+.phy-view-50{
+   background-position: -532px -246px;
+  top: -13px;
+}
+.phy-view-75{
+   background-position:  -435px -246px;
+  top: -13px;
+}
+.phy-view-100{
+   background-position: -334px -246px;
+  top: -13px;
+}
+.math-star-0:after,.phy-star-0:after{
  background-image: url('images/sprite.png');
    background-position: -338px -418px;
   top: -13px;
@@ -290,7 +308,7 @@ header{
   height: 67px;
   background-repeat: no-repeat
 }
-.math-star-1:after{
+.math-star-1:after,.phy-star-1:after{
  background-image: url('images/sprite.png');
    background-position:-434px -418px;
   top: -13px;
@@ -300,7 +318,7 @@ header{
   height: 67px;
   background-repeat: no-repeat
 }
-.math-star-2:after{
+.math-star-2:after,.phy-star-2:after{
  background-image: url('images/sprite.png');
    background-position: -531px -418px;
   top: -13px;
@@ -310,7 +328,7 @@ header{
   height: 67px;
   background-repeat: no-repeat
 }
-.math-star-3:after{
+.math-star-3:after,.phy-star-3:after{
  background-image: url('images/sprite.png');
    background-position:-630px -418px;
   top: -13px;
@@ -671,9 +689,24 @@ margin: 40px 0px;
   text-align: center;
 
 }
+.medium .icon-check-red{
+  left: 160px
+}
+.hard .icon-check-red{
+  left: 200px
+}
 .page-difficulty .main ul li span.level{
   font-size: 66px;
   font-weight: 300
+}
+.page-difficulty .main ul li span.level.medium{
+  font-weight: 500
+}
+.page-difficulty .main ul li span.level.easy{
+  font-weight: 300
+}
+.page-difficulty .main ul li span.level.hard{
+  font-weight: 600
 }
 .page-difficulty .main ul li span.level{
   font-size: 66px;
@@ -686,7 +719,6 @@ margin: 40px 0px;
 }
 .page-difficulty .main ul li span.level.check-level{
   color: #db3e67;
-  font-weight: 300;
 }
 .btn-subject.btn-difficulty{
   background: #db3e67;
@@ -1241,7 +1273,7 @@ width: 100%
   float: left;
  }
   .time-discussion {
-  font-size: 22px;
+  font-size: 18px;
   float: right;
   color: #9482a8;
  }
@@ -1504,12 +1536,21 @@ width: 590px;
       padding: 20px 0px;
   float: left
 }
+.active-friends{
+background: #fff;
+color: #db3e67}
 .footer-center{
   width: 244px;
       padding: 20px 0px;
   float: left;
-  background: #fff;
   color: #3050c9;
+}
+.footer-center.active-friends{
+
+  background: #fff;
+}
+.friend-list-footer .active-friends a{
+  color: #db3e67
 }
 .footer-right{
   width: 242px;
@@ -1635,9 +1676,11 @@ background-image: url('images/sprite.png');
   display: block;
   margin: 0 auto
 }
-.footer-smardy-list .footer-center{
-  background: none;
+.footer-smardy-list a{
   color: #eeeeee
+}
+.footer-smardy-list .active-friends a{
+  color: #db3e67
 }
 .footer-smardy-list .face-icon{
   background-position: -564px -912px;
@@ -1700,7 +1743,7 @@ text-transform: uppercase;
 .ranking-li img {
   width: 99px;
   margin-right: 30px;
-  margin-left: 20px;
+  margin-left: 10px;
   float: left;
 }
 .ranking-li {
@@ -1777,15 +1820,17 @@ width: 100%
   }
   .mes-ico.count-mes{
    background: #db3e67;
-  border-radius: 100%;
+  border-radius: 35px;
   height: 35px;
-  width: 35px;
+  width: auto;
+  padding: 0 10px;
+  line-height: 35px;
   text-align: center;
   font-size: 22px;
   margin-top: -10px;
   position: relative;
   top: -20px;
-  left: 30px;
+    right: -25px;
   }
 #messages-top{
   margin-top: 30px
@@ -1802,12 +1847,7 @@ width: 100%
   background-color: #db3e67;
 
 }
-#icon-chat-btn{
-  border-bottom: 3px solid #db3e67;
-  margin-top: -75px;
-  position: relative;
-  z-index: 9
-}
+
 .message-details{
   width: 680px;
   margin: 0 auto;
@@ -2376,3 +2416,60 @@ position: relative;
   right: -20px;
 
 }
+.ranking h3{  font-size: 36px;
+  color: #fff;
+  font-weight: 300;
+  width: 670px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 40px;
+  margin-bottom: 30px;}
+.ranking .header-ranking{
+ font-size:27px;
+  color: #fff;
+  width: 670px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 30px;}
+  .header-ranking b{color: #db3e67;font-weight: 400}
+
+   .header-ranking ins{
+      font-size: 18px;
+  position: relative;
+  top: -14px;
+  text-decoration: none;
+  }
+  .ranking-li number{
+    float: left;
+  color: #db3e67;
+    margin-left: 10px;
+  font-size: 27px;
+  line-height: 100px;
+  }
+  #icon-chat-btn{
+border-bottom: 3px solid #db3e67;
+  margin-top: -75px;
+  position: fixed;
+  z-index: 9;
+  bottom: 0px;
+  left: 45%;
+    transition-property: bottom;
+  transition-duration: 1s;
+  transition-timing-function: linear;
+}
+  #list-chat-message{
+  bottom: -990px;
+  position: fixed;
+  width: 750px;
+  background: #2d2734;
+  transition-property: bottom;
+  transition-duration: 1s;
+  transition-timing-function: linear;
+  }
+    #list-chat-message.hello{
+        bottom: 0px;
+
+    }
+    .friend-li:first-child{
+border-top: 3px solid #db3e67;
+    }
