--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a:hover{
   text-align: center;
 }
 .min-800px{
-  min-height: 1000px;
+  min-height: 800px;
   background: #2d2734
 }
 #home header img{
@@ -675,7 +675,7 @@ background-image: url('images/sprite.png');
       border-bottom: 1px solid #504c55;
      
 }
-span big{
+span span.big{
    font-weight: 600;
    color: #db3e67;
 }
@@ -1477,7 +1477,7 @@ top:25%;}
   color: #db3e67;
   text-transform: uppercase;
 }
-.topic-history-time time{
+.topic-history-time span.time-a{
   font-weight: 500
 }
 .dropdown-history  .topic-history-time{
@@ -1509,7 +1509,7 @@ width: 590px;
 
 }
 #historybytime .thread-discussion-fitter{
-  border: none;
+  border-bottom: none;
 }
 .discu-time-date-tile{
   font-size: 27px;
@@ -1544,7 +1544,7 @@ width: 590px;
   color: #fff;
   font-size: 27px;
 }
-.friend-li span big{
+.friend-li span.big{
   font-weight: 300
 }
 .friend-li a{
@@ -1623,7 +1623,7 @@ color: #db3e67}
 display: inline-block;
   text-align: center;
   background: #443a50;
-
+z-index: 999;
   width: 100%;
   font-size: 22px;
   color: #fff;
@@ -1805,6 +1805,7 @@ text-transform: uppercase;
   width: 45px;
 }
  .btn-ranking {
+  background-color: #c8c8c8;
   width: 170px;
   padding: 12px 12px 13px 12px;
   border-radius: 70px 0px 0px 70px;
@@ -1929,7 +1930,7 @@ color: #fff}
   width: 100%;
   font-size: 24px;
 }
-.time-msg time {
+.time-msg span.time-a {
   position: relative;
   z-index: 1;
   background: #2d2735;
@@ -2480,9 +2481,10 @@ position: relative;
   top: -14px;
   text-decoration: none;
   }
-  .ranking-li number{
+  .ranking-li span.number{
     float: left;
   color: #db3e67;
+    width: 20px;
     margin-left: 10px;
   font-size: 27px;
   line-height: 100px;
@@ -2602,4 +2604,96 @@ content: ' ';
   border-radius: 100px;
   line-height: 34px;
   
-};
+}
+    .scrollable.gray-skin .scroll-bar {
+  background-color: #3a3546;
+  border-radius: 5px;
+    border: none;
+}
+.scrollable.gray-skin .scroll-bar.vertical{
+  width: 9px
+}
+.scrollable .scroll-bar.vertical .thumb {
+  width: 100%;
+  min-height: 15px!important;
+  height: 10px!important;
+  border-radius: 100%;
+  width: 15px;
+  position: relative;
+  background: #fff!important;
+  left: -3px;
+
+}
+        /*Vertical scrollbar - set width and height of a div you want to add a scrollbar to*/
+        #vertical-scrollbar-demo {
+            height:200px;
+            width: 625px;
+        }
+
+        /*Horizontal scrollbar - set width and height of a div you want to add a scrollbar to*/
+        #horizontal-scrollbar-demo {
+            width: 400px;
+            height: 200px;
+        }
+
+        /*Horizontal scrollbar - set width of overview or make it expand horizontal like below*/
+        #horizontal-scrollbar-demo .overview {
+            /*width: 1836px;*/
+            /* or */
+            white-space: nowrap;
+        }
+
+        #horizontal-scrollbar-demo img {
+            height: 180px;
+            width: 180px;
+        }
+
+        /*Vertical and horizontal scrollbar - set width and height of a div you want to add a scrollbar to*/
+        #vertical-horizontal-scrollbar-demo {
+            width: 400px;
+            height: 200px;
+        }
+
+        #vertical-horizontal-scrollbar-demo .overview {
+            width: 600px;
+        }
+
+        /* Vertical and horizontal scrollbar - one extra step required - add width of overview - overall width of scrolled content*/
+        #min-thumb-size-demo .overview {
+            width: 600px;
+        }
+
+        /*Vertical and horizontal scrollbar - set width and height of a div you want to add a scrollbar to*/
+        #min-thumb-size-demo {
+            width: 400px;
+            height: 200px;
+        }
+
+        /* Vertical and horizontal scrollbar - one extra step required - add width of overview - overall width of scrolled content*/
+        #min-thumb-size-demo .overview {
+            width: 600px;
+        }
+
+        #min-thumb-size-demo .vertical .thumb {
+            min-height: 150px;
+        }
+
+        #min-thumb-size-demo .horizontal .thumb {
+            min-width: 300px;
+        }
+
+        #fixed-thumb-size-demo {
+            width: 400px;
+            height: 200px;
+        }
+
+        /* Vertical and horizontal scrollbar - one extra step required - add width of overview - overall width of scrolled content*/
+        #fixed-thumb-size-demo .overview {
+            width: 600px;
+        }
+
+        /*No scrollbar needed*/
+        #no-scrollbar-needed {
+            max-height: 100px;
+            max-width: 400px;
+        }
